Substitute for web_app_voila
Changed how the DOS and transmission energies are stored, and update progress bar with 102 max value

--- a/Web_app_voila.ipynb
+++ b/Web_app_voila.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tight-binding based transport application for graphene nanoribbon junctions"
+    "# Tight-binding electronic transport across graphene nanoribbon junctions"
    ]
   },
   {
@@ -16,9 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Anaconda\\lib\\site-packages\\kwant\\solvers\\default.py:18: RuntimeWarning: MUMPS is not available, SciPy built-in solver will be used as a fallback. Performance can be very poor in this case.\n",
+      "  \"Performance can be very poor in this case.\", RuntimeWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import kwant\n",
     "from math import *\n",
@@ -386,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,35 +490,23 @@
     "    trans=[] #empty list to store values\n",
     "    trans2=[]\n",
     "    energies2=[]\n",
-    "    energies=np.linspace((emin+0.00001)*t, (emax+0.00001)*t, num=300) #specify energy grid\n",
+    "    energies=np.linspace((emin-0.00001)*t, (emax+0.00001)*t, num=500) #specify energy grid\n",
     "    perfsys=perfect_system(t) #obtain the geometry of the pristine lead system\n",
     "    for i,energy in enumerate(energies):\n",
-    "        if i==60:\n",
-    "            progress.value=1\n",
-    "        if i==120:\n",
-    "            progress.value=2\n",
-    "        if i==180:\n",
-    "            progress.value=3\n",
-    "        if i==180:\n",
-    "            progress.value=4\n",
-    "        if i==300:\n",
-    "            progress.value=5  \n",
+    "        if i%10==0:\n",
+    "            progress.value=i/10  \n",
     "        smatrix = kwant.smatrix(fsys, energy,check_hermiticity=False) #calculates the S matrix of the system in interest\n",
     "        trans.append(smatrix.transmission(1,0)) #calcualtes the transmission coefficient\n",
-    "        if i%2==0:\n",
-    "            smatrix2 = kwant.smatrix(perfsys, energy,check_hermiticity=False) #same but for ideal lead system\n",
-    "            trans2.append(smatrix2.transmission(1,0))\n",
-    "            energies2.append(energy)\n",
+    "        smatrix2 = kwant.smatrix(perfsys, energy,check_hermiticity=False) #same but for ideal lead system\n",
+    "        trans2.append(smatrix2.transmission(1,0))\n",
     "    for j in range(len(energies)):\n",
-    "        energies[j]=energies[j]/t #convert energies back in terms of t\n",
-    "    for k in range(len(energies2)):\n",
-    "        energies2[k]=energies2[k]/t #convert energies back in terms of t        \n",
-    "    return energies, energies2, trans, trans2\n"
+    "        energies[j]=energies[j]/t #convert energies back in terms of t      \n",
+    "    return energies, trans, trans2\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,32 +515,19 @@
     "    dos=[]\n",
     "    dos2=[]\n",
     "    perfsys=perfect_system(t) #make the perfect leads to compare\n",
-    "    energies=np.linspace(emin*t, emax*t, num=300) #eneryg range\n",
+    "    energies=np.linspace((emin-0.00001)*t, (emax+0.00001)*t, num=500) #specify energy grid\n",
     "    \n",
     "    for i,J in enumerate(energies):\n",
-    "        if i==60:\n",
-    "            progress.value=6\n",
-    "        if i==120:\n",
-    "            progress.value=7\n",
-    "        if i==180:\n",
-    "            progress.value=8\n",
-    "        if i==180:\n",
-    "            progress.value=9\n",
-    "        if i==300:\n",
-    "            progress.value=10\n",
+    "        if i%10==0:\n",
+    "            progress.value=i/10+50  \n",
     "        dos.append(np.sum(kwant.ldos(fsys,J))) #sum over all atom ldos\n",
-    "        if i%2==0:\n",
-    "            dos2.append(np.sum(kwant.ldos(perfsys,J)))\n",
-    "        \n",
-    "    for j in range(len(energies)):\n",
-    "        energies[j]=energies[j]/t         #convert energies in terms of t\n",
-    "       \n",
+    "        dos2.append(np.sum(kwant.ldos(perfsys,J)))       \n",
     "    return dos, dos2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,13 +564,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Returns current and other variables for plotting later\n",
     "def get_current(en=0.5,t=2.75):\n",
-    "    psi = kwant.wave_function(fsys,energy=t*(en+0.001))(0) #get the wavefunction\n",
+    "    psi = kwant.wave_function(fsys,energy=t*(en+0.0001))(0) #get the wavefunction\n",
     "    hop_lead_nr=kwant.plotter.sys_leads_hoppings(fsys,num_lead_cells=0)\n",
     "    hoppings=kwant.plotter.sys_leads_hopping_pos(fsys, hop_lead_nr[0]) #get the hoppings in the system for plotting the current lines\n",
     "    N=len(hoppings[0])\n",
@@ -606,14 +590,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def lead_wfn(en=0.5,mode=0,t=2.75):\n",
     "    leads=perfect_system(t)\n",
     "    ######Calculating the wave function in scattering center\n",
-    "    wf = kwant.solvers.default.wave_function(leads,energy=t*(en+0.00001))\n",
+    "    wf = kwant.solvers.default.wave_function(leads,energy=t*(en+0.0001))\n",
     "    if len(wf(0))!=0:  #This part takes care to set maximum number of modes at particular energy\n",
     "        if ldos_current==1: #checks if the last cell has been initialized (dummy variable)\n",
     "            Single_en_at.children[1].max=len(wf(0)) #sets maximum by checking how many wfn are at the energy\n",
@@ -652,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,25 +675,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Plotting function to get both Conductance and DOS\n",
     "def cond_and_dos(Emin,Emax):\n",
-    "    energies, energies2, trans, trans2=plot_conductance(Emin,Emax)\n",
+    "    energies, trans, trans2=plot_conductance(Emin,Emax)\n",
     "    dos, dos2 = get_DOS(Emin,Emax)\n",
-    "    progress.value=11\n",
+    "    progress.value=101\n",
     "    fig, (ax, ax2) = plt.subplots(1, 2, figsize=(20,10)) \n",
     "    ax.plot(energies, trans, label=\"Junction\")\n",
-    "    ax.plot(energies2, trans2, label=\"GNR\")\n",
+    "    ax.plot(energies, trans2, label=\"GNR\")\n",
     "    ax.legend()\n",
     "    ax.set_xlabel(\"Energy (t)\")\n",
     "    ax.set_ylabel(\"Conductance (e\\N{SUPERSCRIPT TWO}/h)\")\n",
     "    ax.set_xticks(np.arange(Emin, Emax+(Emax-Emin)/10, round((Emax-Emin)/10,2)))\n",
     "    ax.xaxis.set_tick_params(rotation=90)\n",
     "    ax2.plot(energies, dos,label='Junction')\n",
-    "    ax2.plot(energies2, dos2,label='GNR')\n",
+    "    ax2.plot(energies, dos2,label='GNR')\n",
     "    ax2.legend()\n",
     "    ax2.set_xlabel(\"Energy (t)\")\n",
     "    ax2.set_ylabel(\"DOS\")\n",
@@ -721,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,15 +842,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6eecc02731b74d869baa468310d906c3",
+       "model_id": "9f2c22eb1fe6403798d5fd270b893a3a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -880,7 +862,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "30a10e57d55c4060ace029d2d94a3061",
+       "model_id": "c36d9c0480ed4488ab46615ccd480a8e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -894,7 +876,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "df22df40bade4bd8bb0f0cd76fcdc6d9",
+       "model_id": "b7c8e1b3b0e04552ae3847b2bdf85a70",
        "version_major": 2,
        "version_minor": 0
       },
@@ -949,13 +931,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d6de0b4e8d274e1085f126aec1505dc9",
+       "model_id": "c3ebbc13c04c40e4a774b2e1f8dee142",
        "version_major": 2,
        "version_minor": 0
       },
@@ -969,12 +951,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "45bafe60175d47eca18120c5102f886e",
+       "model_id": "128b323a45174a2ea31ae01f2e1c5cb9",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "IntProgress(value=0, bar_style='info', description='Progress:', layout=Layout(visibility='hidden'), max=10)"
+       "IntProgress(value=0, bar_style='info', description='Progress:', layout=Layout(visibility='hidden'), max=12)"
       ]
      },
      "metadata": {},
@@ -983,7 +965,7 @@
    ],
    "source": [
     "#Again a manual interact widget just like the Remove atoms. Finalizes the system and then plots conductance and dos. \n",
-    "progress=widgets.IntProgress(value=0,min=0,max=12,step=1,description='Progress:',bar_style='info',orientation='horizontal')\n",
+    "progress=widgets.IntProgress(value=0,min=0,max=102,step=1,description='Progress:',bar_style='info',orientation='horizontal')\n",
     "progress.layout.visibility='hidden'\n",
     "interact_calc=interact.options(manual=True, manual_name=\"Calculate\")\n",
     "@interact_calc(Emin=widgets.FloatSlider(description_tooltip=\"Select the lowest energy of the desired range\",min=-3, max=3, step=0.1, value=-3, description=\"Min Energy (t)\",style=style),Emax=widgets.FloatSlider(min=-3, max=3, step=0.1, value=3,description_tooltip=\"Select the highest energy of the desired range\",description=\"Max Energy (t)\",style=style))\n",
@@ -998,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,11 +1006,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5a949a0b9ce44c5b948b6590410e43eb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(FloatText(value=0.5, description='Energy (t)', description_tooltip='Enter the energy at …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "display(Single_en_at)"
    ]
