Updated title page and main app
Changed the description and about sections in title page. Changed the name in both notebooks to TBETA

--- a/Web_app_voila.ipynb
+++ b/Web_app_voila.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tight-binding electronic transport across graphene nanoribbon junctions"
+    "# TBETA (Tight-binding electronic transport application) for graphene nanoribbon junctions"
    ]
   },
   {
