--- a/Web_app_voila.ipynb
+++ b/Web_app_voila.ipynb
@@ -1,10 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ipywidgets as widgets\n",
+    "file = open(\"images/Logo_for_app_3.png\", \"rb\")\n",
+    "image = file.read()\n",
+    "logo=widgets.Image(\n",
+    "    value=image,\n",
+    "    format='png',\n",
+    "    width=300,\n",
+    "    height=400,\n",
+    ")\n",
+    "logo"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TBETA (Tight-binding electronic transport application) for graphene nanoribbon junctions"
+    "# Tight-Binding Electronic Transport Application for graphene nanoribbon junctions"
    ]
   },
   {
