--- a/Web_app_title_page.ipynb
+++ b/Web_app_title_page.ipynb
@@ -64,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Start the application](/voila/render/Documents/GNR/web_app_voila.ipynb)"
+    "[Start the application](Web_app_voila.ipynb)"
    ]
   },
   {
