Cosmetic changes and change in wfn display
Minor changes in title page, grant number, name, full reference info, version number
Minor changes in main page - ylim set to 0 for cond and DOS, added titles to LDOS and Probability current plots, X,gamma,X changed to -pi/a,0,p/a and k-vector
Additional text about and in tooltips
Number of sampling points reduced from 500 to 300, progress bar increased to 62 parts
All wavefunctions now displayed and hence removed mode slider

--- a/Web_app_voila.ipynb
+++ b/Web_app_voila.ipynb
@@ -2,9 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "62a3ab35c2954ca78224947353664ce3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Image(value=b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHDR\\x00\\x00\\x12\\xbe\\x00\\x00\\x03\\xfa\\x08\\x02\\x00\\x00\\x00W\\xad\\r\\'…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import ipywidgets as widgets\n",
     "file = open(\"images/Logo_for_app_3.png\", \"rb\")\n",
@@ -29,12 +44,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Select the properties of your desired junction. Some options are only active with specific angle or width. Individual atoms can be removed below the displayed structure by entering the numbers of the removable atoms sperated by a comma (,) and clicking on \"Remove atoms\" button. Clicking on the \"Reset system\" button will return the starting system. Band structure of the selected leads is displayed next to your system.  "
+    "Select the properties of your desired junction. Some options are only active with specific angle or width. Individual atoms can be removed below the displayed structure by entering the numbers of the removable atoms sperated by a comma (,) and clicking on \"Remove atoms\" button. Clicking on the \"Reset system\" button will return the starting system. Band structure of the selected leads is displayed next to your system. *For more information hover the cursor over the junction property*."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,9 +483,9 @@
     "        momenta, energies = get_band(lead0)\n",
     "        ax2.plot(momenta, energies, c='black')\n",
     "        ax2.set_xticks(np.arange(-1,1.1,1))\n",
-    "        ax2.set_xticklabels(['X', 'Γ', 'X'])\n",
+    "        ax2.set_xticklabels(['-π/a', '0', 'π/a'])\n",
     "        ax2.set_title('Band structure of the leads')\n",
-    "        ax2.set_xlabel(\"Wave vector\")\n",
+    "        ax2.set_xlabel(\"k-vector\")\n",
     "        ax2.set_ylabel(\"Energy (t)\")\n",
     "        #returns the dimensions of the structure\n",
     "        return xaxis, yaxis"
@@ -478,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,11 +523,11 @@
     "    trans=[] #empty list to store values\n",
     "    trans2=[]\n",
     "    energies2=[]\n",
-    "    energies=np.linspace((emin-0.00001)*t, (emax+0.00001)*t, num=500) #specify energy grid\n",
+    "    energies=np.linspace((emin-0.00001)*t, (emax+0.00001)*t, num=300) #specify energy grid\n",
     "    perfsys=perfect_system(t) #obtain the geometry of the pristine lead system\n",
     "    for i,energy in enumerate(energies):\n",
-    "        if i%25==0:\n",
-    "            progress.value=i/25  \n",
+    "        if i%10==0:\n",
+    "            progress.value=i/10  \n",
     "        smatrix = kwant.smatrix(fsys, energy,check_hermiticity=False) #calculates the S matrix of the system in interest\n",
     "        trans.append(smatrix.transmission(1,0)) #calcualtes the transmission coefficient\n",
     "        smatrix2 = kwant.smatrix(perfsys, energy,check_hermiticity=False) #same but for ideal lead system\n",
@@ -524,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,11 +548,11 @@
     "    dos=[]\n",
     "    dos2=[]\n",
     "    perfsys=perfect_system(t) #make the perfect leads to compare\n",
-    "    energies=np.linspace((emin-0.00001)*t, (emax+0.00001)*t, num=500) #specify energy grid\n",
+    "    energies=np.linspace((emin-0.00001)*t, (emax+0.00001)*t, num=300) #specify energy grid\n",
     "    \n",
     "    for i,J in enumerate(energies):\n",
-    "        if i%25==0:\n",
-    "            progress.value=i/25+20  \n",
+    "        if i%10==0:\n",
+    "            progress.value=i/10+30  \n",
     "        dos.append(np.sum(kwant.ldos(fsys,J))) #sum over all atom ldos\n",
     "        dos2.append(np.sum(kwant.ldos(perfsys,J)))       \n",
     "    return dos, dos2"
@@ -545,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,20 +623,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-10-eaf3679abf47>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-10-eaf3679abf47>\"\u001b[1;36m, line \u001b[1;32m5\u001b[0m\n\u001b[1;33m    for i in range(len(wf(0)):  #Loop over all wfn modes\u001b[0m\n\u001b[1;37m                             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def lead_wfn(en=0.5,mode=0,t=2.75):\n",
     "    leads=perfect_system(t)\n",
     "    ######Calculating the wave function in scattering center\n",
     "    wf = kwant.solvers.default.wave_function(leads,energy=t*(en+0.0001))\n",
-    "    if len(wf(0))!=0:  #This part takes care to set maximum number of modes at particular energy\n",
-    "        if ldos_current==1: #checks if the last cell has been initialized (dummy variable)\n",
-    "            Single_en_at.children[1].max=len(wf(0)) #sets maximum by checking how many wfn are at the energy\n",
-    "            if Single_en_at.children[1].value>len(wf(0)): #check if current selection isn't higher than the max\n",
-    "                Single_en_at.children[1].value=len(wf(0))\n",
-    "        psi_l= wf(0)[mode] #selecting the wfn incoming from left (0) and selecting the mode\n",
+    "    for i in range(len(wf(0))):  #Loop over all wfn modes\n",
+    "        psi_l= wf(0)[i] #selecting the wfn incoming from left (0) and selecting the mode\n",
     "        amplitude=[]\n",
     "        pha=[]\n",
     "        for j in range (len(psi_l)): #for each atom get amplitude and phase\n",
@@ -654,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,13 +721,14 @@
     "def cond_and_dos(Emin,Emax):\n",
     "    energies, trans, trans2=plot_conductance(Emin,Emax)\n",
     "    dos, dos2 = get_DOS(Emin,Emax)\n",
-    "    progress.value=101\n",
+    "    progress.value=61\n",
     "    fig, (ax, ax2) = plt.subplots(1, 2, figsize=(20,10)) \n",
     "    ax.plot(energies, trans, label=\"Junction\")\n",
     "    ax.plot(energies, trans2, label=\"GNR\")\n",
     "    ax.legend()\n",
     "    ax.set_xlabel(\"Energy (t)\")\n",
     "    ax.set_ylabel(\"Conductance (e\\N{SUPERSCRIPT TWO}/h)\")\n",
+    "    ax.set_ylim(ymin=0)\n",
     "    ax.set_xticks(np.arange(Emin, Emax+(Emax-Emin)/10, round((Emax-Emin)/10,2)))\n",
     "    ax.xaxis.set_tick_params(rotation=90)\n",
     "    ax2.plot(energies, dos,label='Junction')\n",
@@ -715,6 +736,7 @@
     "    ax2.legend()\n",
     "    ax2.set_xlabel(\"Energy (t)\")\n",
     "    ax2.set_ylabel(\"DOS\")\n",
+    "    ax2.set_ylim(ymin=0)\n",
     "    ax2.set_xticks(np.arange(Emin, Emax+(Emax-Emin)/10, round((Emax-Emin)/10,2)))\n",
     "    ax2.xaxis.set_tick_params(rotation=90)\n",
     "    \n",
@@ -723,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,7 +763,8 @@
     "        ax.set_ylim(yaxis)\n",
     "        ax.set_xlim(xaxis)\n",
     "        ax.set_xticks([])\n",
-    "        ax.set_yticks([])    \n",
+    "        ax.set_yticks([])\n",
+    "        ax.set_title('Local density of states')\n",
     "        kwant.plot(fsys,site_size=ldos/1.75,site_color='blue', lead_color='black',ax=ax)\n",
     "        circle1 = plt.Circle((xaxis[0]+1,yaxis[1]-2), 0.325, color='blue')\n",
     "        ax.add_artist(circle1)\n",
@@ -763,7 +786,8 @@
     "        ax2.set_xticks([])\n",
     "        ax2.set_ylim(yaxis)\n",
     "        ax2.set_xlim(xaxis)\n",
-    "        smatrix = kwant.smatrix(fsys, Energy*t) #calculates the S matrix of the system in interest\n",
+    "        ax2.set_title('Probability curren map')\n",
+    "        smatrix = kwant.smatrix(fsys, (Energy+0.00001)*t) #calculates the S matrix of the system in interest\n",
     "        T=(smatrix.transmission(1,0)) #calcualtes the transmission coefficient\n",
     "        ax2.text(xaxis[0]+1.5,yaxis[1]-2,s=str(\"Transmission:\"+\"{:.2E}\".format(T)))\n",
     "        \n",
@@ -787,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,10 +865,10 @@
     "#reseting or removing some atoms as the widget executes the function anytime a parameter is changed. \n",
     "#In the initial widget hence this RemAtoms section must be hidden and is set to be empty.\n",
     "Selection = interactive(make_and_display, Angle=widgets.Dropdown(description_tooltip=\"Select the angle between the two leads\",options=[('180°',180),('120°',120),('60°',60)]),\n",
-    "                        Width=widgets.IntSlider(description_tooltip=\"Select the width of the leads in terms of carbon atoms\",min=3, max=16, step=1, value=5),\n",
-    "                        Distance=widgets.IntSlider(description_tooltip=\"Select the distance between the leads\",min=1,max=3,step=1, value=1),\n",
-    "                        Shift=widgets.IntSlider(description_tooltip=\"Shift one lead upwards with respect to another\",min=0,max=5,step=1, value=0),\n",
-    "                        Chirality=widgets.Dropdown(description_tooltip=\"For even-numbered widths of the leads, select chirality\",options=[('up',0),('down',1)]),\n",
+    "                        Width=widgets.IntSlider(description_tooltip=\"Select the width of the leads in terms of carbon atoms\",min=3, max=11, step=1, value=5),\n",
+    "                        Distance=widgets.IntSlider(description_tooltip=\"Change the horizontal distance between the leads, not available with 60° angle\",min=1,max=3,step=1, value=1),\n",
+    "                        Shift=widgets.IntSlider(description_tooltip=\"Shift one lead upwards with respect to another, only available with 180° angle\",min=0,max=5,step=1, value=0),\n",
+    "                        Chirality=widgets.Dropdown(description_tooltip=\"For even-numbered widths, select chirality of the lead\",options=[('up',0),('down',1)]),\n",
     "                        RemAtoms=widgets.Text(value='',description='Previously removed atoms',style=style))\n",
     "\n",
     "Selection.children[5].layout.visibility=\"hidden\" #Hide RemAtoms seciton\n",
@@ -860,13 +884,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9f2c22eb1fe6403798d5fd270b893a3a",
+       "model_id": "7d670349d79e406e928efd95efbb9d83",
        "version_major": 2,
        "version_minor": 0
       },
@@ -880,7 +904,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c36d9c0480ed4488ab46615ccd480a8e",
+       "model_id": "5e61c6d87291445babf5f7674a6f5705",
        "version_major": 2,
        "version_minor": 0
       },
@@ -894,7 +918,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b7c8e1b3b0e04552ae3847b2bdf85a70",
+       "model_id": "09df1d7133734d3f81e7544708297257",
        "version_major": 2,
        "version_minor": 0
       },
@@ -949,13 +973,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c3ebbc13c04c40e4a774b2e1f8dee142",
+       "model_id": "2c1618c4448c4fdf91e297e7129f25ca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -969,12 +993,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "128b323a45174a2ea31ae01f2e1c5cb9",
+       "model_id": "6eb1a28cb25042689489e7bd1f32179d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "IntProgress(value=0, bar_style='info', description='Progress:', layout=Layout(visibility='hidden'), max=12)"
+       "IntProgress(value=0, bar_style='info', description='Progress:', layout=Layout(visibility='hidden'), max=62)"
       ]
      },
      "metadata": {},
@@ -983,7 +1007,7 @@
    ],
    "source": [
     "#Again a manual interact widget just like the Remove atoms. Finalizes the system and then plots conductance and dos. \n",
-    "progress=widgets.IntProgress(value=0,min=0,max=42,step=1,description='Progress:',bar_style='info',orientation='horizontal')\n",
+    "progress=widgets.IntProgress(value=0,min=0,max=62,step=1,description='Progress:',bar_style='info',orientation='horizontal')\n",
     "progress.layout.visibility='hidden'\n",
     "interact_calc=interact.options(manual=True, manual_name=\"Calculate\")\n",
     "@interact_calc(Emin=widgets.FloatSlider(description_tooltip=\"Select the lowest energy of the desired range\",min=-3, max=3, step=0.1, value=-3, description=\"Min Energy (t)\",style=style),Emax=widgets.FloatSlider(min=-3, max=3, step=0.1, value=3,description_tooltip=\"Select the highest energy of the desired range\",description=\"Max Energy (t)\",style=style))\n",
@@ -998,19 +1022,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Widget for displaying current, ldos and wavefunction. Two selections - energy (for all) and mode(just for wfn)\n",
-    "def single(Energy,Mode):\n",
+    "def single(Energy):\n",
     "    global fsys\n",
     "    fsys=sys.finalized()\n",
     "    ldos_and_current(Energy)\n",
-    "    lead_wfn(en=Energy,mode=Mode-1)    \n",
+    "    lead_wfn(en=Energy)    \n",
     "    \n",
-    "Single_en_at = interactive(single,Energy=widgets.FloatText(description_tooltip=\"Enter the energy at wich you want to calculate the properties\",value=0.5,description=\"Energy (t)\"),\n",
-    "                           Mode=widgets.IntSlider(description_tooltip=\"Select between wavefunctions at the selected energy\",min=1, max=10, value=0))\n",
+    "Single_en_at = interactive(single,Energy=widgets.FloatText(description_tooltip=\"Enter the energy at wich you want to calculate the properties\",value=0.5,description=\"Energy (t)\"))\n",
     "ldos_current=1\n",
     "    "
    ]
@@ -1019,7 +1042,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To calculate local DOS, current map and wavefunction in the lead, select the desired energy value. In cases where multiple bands are present at the selected energy, wavefunctions coresponding to different bands can be calculated by selecting mode. Modes range from 1 to N, with N being the bumber of bands at the selected energy. Current map displays the cumulative current from all channels involved at the selected energy.  "
+    "To calculate local DOS, current map and wavefunction in the lead, select the desired energy value. In cases where multiple bands are present at the selected energy, wavefunctions coresponding to all bands will be displayed. Current map displays the cumulative current from all channels involved at the selected energy.  "
    ]
   },
   {
