--- a/Web_app_voila.ipynb
+++ b/Web_app_voila.ipynb
@@ -44,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Select the properties of your desired junction. Some options are only active with specific angle or width. Individual atoms can be removed below the displayed structure by entering the numbers of the removable atoms sperated by a comma (,) and clicking on \"Remove atoms\" button. Clicking on the \"Reset system\" button will return the starting system. Band structure of the selected leads is displayed next to your system. *For more information hover the cursor over the junction property*."
+    "Select the parameters defining the structure of your GNR junction. Some options are only active for specific junction angle or lead width. Additional information on the parameters is displayed *when the cursor is placed over the parameter name*. Atoms can be removed from the initial junction structure by entering their numbers separated by a comma (,) and pressing '*Remove atoms*'. Button '*Reset system*' returns the junction structure to its initial state. Band structure of the selected GNR leads is displayed next to the junction structure. At present, the application allows defining only the junctions with identical armchair GNR leads."
    ]
   },
   {
@@ -663,6 +663,7 @@
     "        ax1.set_xticks([])\n",
     "        ax1.set_yticks([])\n",
     "        ax1.set_aspect('equal','box')\n",
+    "        ax1.set_title('Wavefunction, lead channel '+str(i+1)) \n",
     "        kwant.plotter.plot(leads,site_size=amplitude/max(amplitude)/2.5,site_color=pha,lead_color='black',cmap=cmocean.cm.phase,fig_size=(10,5),colorbar=False,ax=ax1)\n",
     "        azimuths = np.arange(0, 361, 1)\n",
     "        zeniths = np.arange(70, 100, 1)\n",
@@ -690,7 +691,7 @@
     "    leads = kwant.Builder() # Initialize system builder\n",
     "    def rec(pos):\n",
     "        x, y = pos\n",
-    "        return -sqrt(3)<=x<=3*sqrt(3) and 0<=y<=(W-1)/2\n",
+    "        return -sqrt(3)<=x<=4*sqrt(3) and 0<=y<=(W-1)/2\n",
     "    leads[graphene.shape(rec, (0, 0))] = 0    # Build scattering region\n",
     "    leads[graphene.neighbors()] = -t #Assign nearest-neighbour hoppings\n",
     "    leads[a(0, round((W-1)/2+1, 1))] = 0 #add two \"fake\" atoms for color map normalisation\n",
@@ -724,7 +725,7 @@
     "    progress.value=61\n",
     "    fig, (ax, ax2) = plt.subplots(1, 2, figsize=(20,10)) \n",
     "    ax.plot(energies, trans, label=\"Junction\")\n",
-    "    ax.plot(energies, trans2, label=\"GNR\")\n",
+    "    ax.plot(energies, trans2, label=\"Lead\")\n",
     "    ax.legend()\n",
     "    ax.set_xlabel(\"Energy (t)\")\n",
     "    ax.set_ylabel(\"Conductance (e\\N{SUPERSCRIPT TWO}/h)\")\n",
@@ -732,7 +733,7 @@
     "    ax.set_xticks(np.arange(Emin, Emax+(Emax-Emin)/10, round((Emax-Emin)/10,2)))\n",
     "    ax.xaxis.set_tick_params(rotation=90)\n",
     "    ax2.plot(energies, dos,label='Junction')\n",
-    "    ax2.plot(energies, dos2,label='GNR')\n",
+    "    ax2.plot(energies, dos2,label='Lead')\n",
     "    ax2.legend()\n",
     "    ax2.set_xlabel(\"Energy (t)\")\n",
     "    ax2.set_ylabel(\"DOS\")\n",
@@ -786,7 +787,7 @@
     "        ax2.set_xticks([])\n",
     "        ax2.set_ylim(yaxis)\n",
     "        ax2.set_xlim(xaxis)\n",
-    "        ax2.set_title('Probability curren map')\n",
+    "        ax2.set_title('Local current map')\n",
     "        smatrix = kwant.smatrix(fsys, (Energy+0.00001)*t) #calculates the S matrix of the system in interest\n",
     "        T=(smatrix.transmission(1,0)) #calcualtes the transmission coefficient\n",
     "        ax2.text(xaxis[0]+1.5,yaxis[1]-2,s=str(\"Transmission:\"+\"{:.2E}\".format(T)))\n",
@@ -811,9 +812,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'interactive' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-67d334c59283>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     48\u001b[0m \u001b[1;31m#reseting or removing some atoms as the widget executes the function anytime a parameter is changed.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     49\u001b[0m \u001b[1;31m#In the initial widget hence this RemAtoms section must be hidden and is set to be empty.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 50\u001b[1;33m Selection = interactive(make_and_display, Angle=widgets.Dropdown(description_tooltip=\"Select the angle between the two leads\",options=[('180°',180),('120°',120),('60°',60)], value=120),\n\u001b[0m\u001b[0;32m     51\u001b[0m                         \u001b[0mWidth\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mwidgets\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mIntSlider\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdescription_tooltip\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"Select the width of the leads in terms of carbon atoms\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mmin\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmax\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m11\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstep\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     52\u001b[0m                         \u001b[0mDistance\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mwidgets\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mIntSlider\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdescription_tooltip\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"Change the horizontal distance between the leads, not available with 60° angle\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mmin\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mmax\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mstep\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'interactive' is not defined"
+     ]
+    }
+   ],
    "source": [
     "oldreset=0\n",
     "ireset=0 #dummy variables to workaround that one couldnt change the system parameters while remove atoms was submitted forcing to reset system first\n",
@@ -864,7 +877,7 @@
     "#change the hidden RemAtoms selection. Therefore RemAtoms here is needed so that we can \"rebuild\" our system either by\n",
     "#reseting or removing some atoms as the widget executes the function anytime a parameter is changed. \n",
     "#In the initial widget hence this RemAtoms section must be hidden and is set to be empty.\n",
-    "Selection = interactive(make_and_display, Angle=widgets.Dropdown(description_tooltip=\"Select the angle between the two leads\",options=[('180°',180),('120°',120),('60°',60)]),\n",
+    "Selection = interactive(make_and_display, Angle=widgets.Dropdown(description_tooltip=\"Select the angle between the two leads\",options=[('180°',180),('120°',120),('60°',60)], value=120),\n",
     "                        Width=widgets.IntSlider(description_tooltip=\"Select the width of the leads in terms of carbon atoms\",min=3, max=11, step=1, value=5),\n",
     "                        Distance=widgets.IntSlider(description_tooltip=\"Change the horizontal distance between the leads, not available with 60° angle\",min=1,max=3,step=1, value=1),\n",
     "                        Shift=widgets.IntSlider(description_tooltip=\"Shift one lead upwards with respect to another, only available with 180° angle\",min=0,max=5,step=1, value=0),\n",
@@ -939,7 +952,7 @@
     "#manual interact button to \"Remove atoms\". Solved by copying a piece of code , however it displays the widget without\n",
     "#the display(widget) function. Just makes the code messier, but works...\n",
     "remov_atoms=interact.options(manual=True, manual_name=\"Remove atoms\") \n",
-    "rem_wid=widgets.Text(description_tooltip=\"Enter the numbers of the atoms you want to remove separated by a comma (,)\",description='Enter atoms to remove:',placeholder='e.g. 1,4,3',style=style)\n",
+    "rem_wid=widgets.Text(description_tooltip=\"Enter the numbers of the atoms you want to remove separated by a comma (,)\",description='Enter atoms to be removed:',placeholder='e.g. 1,4,3',style=style)\n",
     "@remov_atoms(Remove=rem_wid)\n",
     "def calculate_cond(Remove):    \n",
     "    global ireset  #ireset is used to control when a new value for remove atoms is entered\n",
@@ -963,12 +976,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Transport and electronic properties are calculated by designing the desirded system first and then clicking \"Calculate\" button. It is possible to adjust the energy range, where conductance and density of states (DOS) are calculated. To calculate the properties in different energy range, select the minimum and maximum energy values and click \"Calculate\" again. Calculation may take some time, the \"Calculate\" button will turn grey when calculation is in progress.\n",
-    "\n",
-    "    \n",
-    "\n",
-    "\n",
-    "    \n"
+    "Select the energy range ('*Min Energy*' and '*Max Energy*') and press '*Calculate*' for computing the conductance and the density of states of the designed GNR junction. The results are compared to that of the ideal leads. Since this computation may take some time, its progress is indicated by the progress bar."
    ]
   },
   {
@@ -1042,7 +1050,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To calculate local DOS, current map and wavefunction in the lead, select the desired energy value. In cases where multiple bands are present at the selected energy, wavefunctions coresponding to all bands will be displayed. Current map displays the cumulative current from all channels involved at the selected energy.  "
+    "Select an energy at which the local density of states, local current map and the wavefunction(s) of the lead channel(s) are displayed. The local current map displays the cumulative current from all channels involved at the selected energy."
    ]
   },
   {
