--- a/Web_app_voila.ipynb
+++ b/Web_app_voila.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "62a3ab35c2954ca78224947353664ce3",
+       "model_id": "38d8a78596964760a60c0bf3890663c6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -56,8 +56,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Anaconda\\lib\\site-packages\\kwant\\solvers\\default.py:18: RuntimeWarning: MUMPS is not available, SciPy built-in solver will be used as a fallback. Performance can be very poor in this case.\n",
-      "  \"Performance can be very poor in this case.\", RuntimeWarning)\n"
+      "/usr/local/lib64/python3.8/site-packages/kwant/solvers/default.py:16: RuntimeWarning: MUMPS is not available, SciPy built-in solver will be used as a fallback. Performance can be very poor in this case.\n",
+      "  warnings.warn(\"MUMPS is not available, \"\n"
      ]
     }
    ],
@@ -625,16 +625,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-10-eaf3679abf47>, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-10-eaf3679abf47>\"\u001b[1;36m, line \u001b[1;32m5\u001b[0m\n\u001b[1;33m    for i in range(len(wf(0)):  #Loop over all wfn modes\u001b[0m\n\u001b[1;37m                             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def lead_wfn(en=0.5,mode=0,t=2.75):\n",
     "    leads=perfect_system(t)\n",
@@ -812,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -820,10 +811,10 @@
      "evalue": "name 'interactive' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-67d334c59283>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     48\u001b[0m \u001b[1;31m#reseting or removing some atoms as the widget executes the function anytime a parameter is changed.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     49\u001b[0m \u001b[1;31m#In the initial widget hence this RemAtoms section must be hidden and is set to be empty.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 50\u001b[1;33m Selection = interactive(make_and_display, Angle=widgets.Dropdown(description_tooltip=\"Select the angle between the two leads\",options=[('180°',180),('120°',120),('60°',60)], value=120),\n\u001b[0m\u001b[0;32m     51\u001b[0m                         \u001b[0mWidth\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mwidgets\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mIntSlider\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdescription_tooltip\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"Select the width of the leads in terms of carbon atoms\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mmin\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmax\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m11\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstep\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     52\u001b[0m                         \u001b[0mDistance\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mwidgets\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mIntSlider\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdescription_tooltip\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"Change the horizontal distance between the leads, not available with 60° angle\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mmin\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mmax\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mstep\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'interactive' is not defined"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-5ac9e7acf4fe>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     48\u001b[0m \u001b[0;31m#reseting or removing some atoms as the widget executes the function anytime a parameter is changed.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     49\u001b[0m \u001b[0;31m#In the initial widget hence this RemAtoms section must be hidden and is set to be empty.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 50\u001b[0;31m Selection = interactive(make_and_display, Angle=widgets.ToggleButtons(description_tooltip=\"Select the angle between the two leads\",options=[('180°',180),('120°',120),('60°',60)], value=120),\n\u001b[0m\u001b[1;32m     51\u001b[0m                         \u001b[0mWidth\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mwidgets\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mIntSlider\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdescription_tooltip\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"Select the width of the leads in terms of carbon atoms\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmin\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m11\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     52\u001b[0m                         \u001b[0mDistance\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mwidgets\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mIntSlider\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdescription_tooltip\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"Change the horizontal distance between the leads, not available with 60° angle\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmin\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'interactive' is not defined"
      ]
     }
    ],
@@ -877,11 +868,11 @@
     "#change the hidden RemAtoms selection. Therefore RemAtoms here is needed so that we can \"rebuild\" our system either by\n",
     "#reseting or removing some atoms as the widget executes the function anytime a parameter is changed. \n",
     "#In the initial widget hence this RemAtoms section must be hidden and is set to be empty.\n",
-    "Selection = interactive(make_and_display, Angle=widgets.Dropdown(description_tooltip=\"Select the angle between the two leads\",options=[('180°',180),('120°',120),('60°',60)], value=120),\n",
+    "Selection = interactive(make_and_display, Angle=widgets.ToggleButtons(description_tooltip=\"Select the angle between the two leads\",options=[('180°',180),('120°',120),('60°',60)], value=120),\n",
     "                        Width=widgets.IntSlider(description_tooltip=\"Select the width of the leads in terms of carbon atoms\",min=3, max=11, step=1, value=5),\n",
     "                        Distance=widgets.IntSlider(description_tooltip=\"Change the horizontal distance between the leads, not available with 60° angle\",min=1,max=3,step=1, value=1),\n",
     "                        Shift=widgets.IntSlider(description_tooltip=\"Shift one lead upwards with respect to another, only available with 180° angle\",min=0,max=5,step=1, value=0),\n",
-    "                        Chirality=widgets.Dropdown(description_tooltip=\"For even-numbered widths, select chirality of the lead\",options=[('up',0),('down',1)]),\n",
+    "                        Chirality=widgets.ToggleButtons(description_tooltip=\"For even-numbered widths, select chirality of the lead\",options=[('up',0),('down',1)]),\n",
     "                        RemAtoms=widgets.Text(value='',description='Previously removed atoms',style=style))\n",
     "\n",
     "Selection.children[5].layout.visibility=\"hidden\" #Hide RemAtoms seciton\n",
@@ -903,7 +894,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d670349d79e406e928efd95efbb9d83",
+       "model_id": "a096e4d28a164fb189612c1eb712fb17",
        "version_major": 2,
        "version_minor": 0
       },
@@ -917,12 +908,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e61c6d87291445babf5f7674a6f5705",
+       "model_id": "a6b2d4937e294b029fc9f14506032a17",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Text(value='', description='Enter atoms to remove:', description_tooltip='Enter the numb…"
+       "interactive(children=(Text(value='', description='Enter atoms to be removed:', description_tooltip='Enter the …"
       ]
      },
      "metadata": {},
@@ -931,7 +922,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "09df1d7133734d3f81e7544708297257",
+       "model_id": "25d969537beb446a94d461a4488012ed",
        "version_major": 2,
        "version_minor": 0
       },
@@ -987,7 +978,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2c1618c4448c4fdf91e297e7129f25ca",
+       "model_id": "035325a1e5814327b5b74a817bbc2aae",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1001,7 +992,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6eb1a28cb25042689489e7bd1f32179d",
+       "model_id": "bbd53f8953a74b04bb11b531fa23fbd6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1030,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1055,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "scrolled": false
    },
@@ -1063,7 +1054,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5a949a0b9ce44c5b948b6590410e43eb",
+       "model_id": "ccdf9c7c828e47efa20c7ad4f7202522",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1244,7 +1235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
